--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -101,3 +101,32 @@ p.profile_friend_username{
 .user-photos-view{
   background-color: transparent;
 }
+
+/*Ask For Key Overlay*/
+#profile_ask_for_key_overlay{
+  height:200px;
+  width:600px;
+  position:absolute;
+  bottom:0;
+
+}
+
+#profile_ask_for_key_overlay{
+  /*56% to white Gradient*/
+  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 56%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(56%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 56%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
+#profile_ask_for_key_overlay button{
+  margin:auto;
+  position:absolute;
+  top:50%;
+  right:35%;
+  width:auto;
+  font-family:"Open Sans";
+}
+/*END Ask For Key Overlay*/
