Ask For Key Overlay buttons work on public rooms.

--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -129,4 +129,7 @@ p.profile_friend_username{
   width:auto;
   font-family:"Open Sans";
 }
+#profile_ask_for_key_overlay button.profile_key_requested{
+  width:130px;
+}
 /*END Ask For Key Overlay*/
