--- a/app/assets/javascripts/FB.js.erb
+++ b/app/assets/javascripts/FB.js.erb
@@ -16,7 +16,7 @@ window.fbAsyncInit = function() {
       appId      : '<%= ENV["ROOMS_FACEBOOK_APP_ID"] %>',                        // App ID from the app dashboard
       status     : true,                                 // Check Facebook Login status
       xfbml      : true,
-      cookie     : true,                                  // Look for social plugins on the page
+      cookie     : true                                  // Look for social plugins on the page
     });
 
     // Additional initialization code such as adding Event Listeners goes here
