add facebook to shop

--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -1,24 +1,13 @@
 <div class="shop_container" xmlns="http://www.w3.org/1999/html">
   <%= render 'shop_nav' %>
 
-
-  <script type="text/javascript" charset="utf-8">
-
-  //    $( "#shop" ).click(function() {
-  //        alert( "Handler for .click() called." );
-  //    });
-
-  </script>
-
-
   <div class="shop_upper_container" >
-    <div id="shop">
-            <a href="#" id="shop11" class="btn btn-primary">Let me see it in my room</a>
-    </div>
-    <a href="#" id="shop_fb_button"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
-    <a href="#"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
-    <%= link_to_function "Add Row", "addRow()" %>
-    <%= button_to "rooms_get_show", "javascript:rooms_get_show()" %>
+
+
+    <a href="#" class="btn btn-primary shop_let_me_see_on_my_room_btn">Let me see it in my room</a>
+    <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
+    <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
+
 
     <br/>
     <br/>
