--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -4,6 +4,8 @@
   <div class="shop_upper_container" data-shop-type="DESIGN">
 
 
+
+    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:'PUBLIC_SHOP',type:'ITEM_D',id:'10'),:class => "btn btn-primary"%>
     <a href="#" class="btn btn-primary shop_let_me_see_on_my_room_btn">Let me see it in my room</a>
     <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
     <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
