Browse Mode Sidebar has blue borders around all active sites.

--- a/app/assets/stylesheets/browse_mode.css.scss
+++ b/app/assets/stylesheets/browse_mode.css.scss
@@ -70,7 +70,7 @@ img.browse_mode_sidebar_icons{
   height:22px;
   border-top: 1px solid #707070;
 }
-#browse_mode_list_selected .browse_mode_sidebar_icons{
+#browse_mode_list_selected .browse_mode_sidebar_icons,.blue_border{
   border:2px solid #40C3FD;
 }
 #browse_mode_active_highlight,#browse_mode_discover_highlight,#browse_mode_mybookmarks_highlight{
