--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -54,3 +54,9 @@
 #xroom_header_search {
   padding-top: 10px;
 }
+/*Browse Mode Your Item*/
+#browse_mode_item_name_wrap{
+  display:inline-block;
+  padding:0 3em;
+  margin: 0 1em;
+}
