--- a/app/views/bundles/index.html.erb
+++ b/app/views/bundles/index.html.erb
@@ -48,8 +48,27 @@
     <td><%= bundle.description %></td>
 
 
-    <td> <%= image_tag bundle.image_name.url().to_s ,width: 100, height:100 %> </td>
-    <td> <%= image_tag bundle.image_name_set.url().to_s ,width: 100, height:100 %> </td>
+    <td>
+
+      <% if bundle.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag bundle.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+
+    </td>
+    <td> <%= image_tag bundle.image_name_set.url().to_s ,width: 100, height:100 %>
+
+      <% if bundle.image_name_set.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag bundle.image_name_set,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+    </td>
 
 
     <%  if bundle.theme.nil? %>
@@ -59,7 +78,15 @@
     <%  else %>
         <td><%= bundle.theme.id %></td>
         <td><%= bundle.theme.name %></td>
-        <td> <%= image_tag bundle.theme.image_name.url().to_s ,width: 100, height:100 %> </td>
+        <td>
+          <% if bundle.theme.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag bundle.theme.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
 
     <%  end %>
 
