--- a/app/views/bundles_items_designs/index_bundle_selection.html.erb
+++ b/app/views/bundles_items_designs/index_bundle_selection.html.erb
@@ -26,8 +26,27 @@
         <td><%= bundle.id %></td>
         <td><%= bundle.name %></td>
         <td><%= bundle.description %></td>
-        <td> <%= image_tag bundle.image_name.url().to_s ,width: 100, height:100 %> </td>
-        <td> <%= image_tag bundle.image_name_set.url().to_s ,width: 100, height:100 %> </td>
+        <td>
+
+          <% if bundle.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag bundle.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+
+        </td>
+        <td>
+
+          <% if bundle.image_name_set.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag bundle.image_name_set,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
 
 
         <%  if bundle.theme.nil? %>
@@ -37,7 +56,16 @@
         <%  else %>
             <td><%= bundle.theme.id %></td>
             <td><%= bundle.theme.name %></td>
-            <td> <%= image_tag bundle.theme.image_name.url().to_s ,width: 100, height:100 %> </td>
+            <td>
+              <% if bundle.theme.image_name.blank?  %>
+                  <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% else %>
+                  <%= cl_image_tag bundle.theme.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% end %>
+
+
+
+            </td>
 
         <%  end %>
 
@@ -54,11 +82,6 @@
       </tr>
   <% end %>
 </table>
-
-<h3>
-
-  <%= link_to 'New Bundle', new_bundle_path %>
-</h3>
 
 
 <br />
