--- a/app/views/bundles_items_designs/index_items_design_selection.html.erb
+++ b/app/views/bundles_items_designs/index_items_design_selection.html.erb
@@ -25,7 +25,16 @@
         <td><%= items_design.id %></td>
         <td><%= items_design.name %></td>
         <td><%= items_design.description %></td>
-        <td><%= image_tag items_design.image_name.url().to_s ,width: 100, height:100 %></td>
+        <td>
+
+          <% if items_design.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag items_design.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
 
 
         <%  if items_design.item.nil? %>
@@ -51,7 +60,15 @@
         <%  else %>
             <td><%= @bundle.id %></td>
             <td><%= @bundle.name %></td>
-            <td> <%= image_tag @bundle.image_name.url().to_s ,width: 100, height:100 %> </td>
+            <td>
+              <% if @bundle.image_name.blank?  %>
+                  <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% else %>
+                  <%= cl_image_tag @bundle.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% end %>
+
+
+            </td>
         <%  end %>
         <td><%= link_to 'Select items Design ', create_bundle_items_design_path(@bundle.id,@location.id,items_design.id), :method => :post %></td>
 
