--- a/app/views/bundles_items_designs/index_items_location_selection.html.erb
+++ b/app/views/bundles_items_designs/index_items_location_selection.html.erb
@@ -52,7 +52,16 @@
         <%  else %>
             <td><%= @bundle.id %></td>
             <td><%= @bundle.name %></td>
-            <td> <%= image_tag @bundle.image_name.url().to_s ,width: 100, height:100 %> </td>
+            <td>
+
+              <% if @bundle.image_name.blank?  %>
+                  <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% else %>
+                  <%= cl_image_tag @bundle.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+              <% end %>
+
+
+            </td>
       <%  end %>
         <td><%= link_to 'Select items and location', index_items_design_selection_path(@bundle.id,items_location.location.id,items_location.item.id), :method => :get %></td>
       </tr>
