--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -25,8 +25,26 @@
     <td><%= item.id %></td>
     <td><%= item.name %></td>
     <td><%= item.clickable %></td>
-    <td><%= cl_image_tag(item.image_name.url().to_s,width: 100, height:100) %></td>
-    <td><%= cl_image_tag(item.image_name_gray.url().to_s,width: 100, height:100) %></td>
+    <td>
+
+      <% if item.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag item.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+    </td>
+    <td>
+      <% if item.image_name_gray.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag item.image_name_gray,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+
+    </td>
     <td><%= item.priority_order %></td>
     <td><%= link_to 'Show', item  , class: "btn btn-primary" %> </td>
     <td><%= link_to 'Edit', edit_item_path(item), class: "btn btn-primary" %></td>
