--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -39,8 +39,26 @@
     <td><%= items_design.id %></td>
     <td><%= items_design.name %></td>
     <td><%= items_design.description %></td>
-    <td><%= image_tag items_design.image_name.url().to_s ,width: 100, height:100 %></td>
-    <td><%= image_tag items_design.image_name_logo.url().to_s ,width: 100, height:100 %></td>
+    <td>
+
+      <% if items_design.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag items_design.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+    </td>
+    <td>
+      <% if items_design.image_name_logo.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag items_design.image_name_logo,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+
+
+    </td>
 
 
     <%  if items_design.item.nil? %>
@@ -51,7 +69,15 @@
     <%  else %>
         <td><%= items_design.item_id %></td>
         <td><%= items_design.item.name %></td>
-        <td><%= image_tag items_design.item.image_name.url().to_s,with:50,height:50 %></td>
+        <td>
+          <% if items_design.item.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:50 , height:50,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag items_design.item.image_name,width:50 , height:50,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
 
     <%  end %>
     <td><%= items_design.category %></td>
