--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -21,7 +21,15 @@
   <tr>
     <td><%= notification.name %></td>
     <td><%= notification.user_id %></td>
-    <td><%= image_tag notification.image_name.url().to_s,width: 100, height:100 %></td>
+    <td>
+
+      <% if notification.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag notification.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+    </td>
     <td><%= link_to 'Show', notification %></td>
     <td><%= link_to 'Edit', edit_notification_path(notification) %></td>
   </tr>
