--- a/app/views/shop/index_bookmarks.html.erb
+++ b/app/views/shop/index_bookmarks.html.erb
@@ -8,9 +8,14 @@
                 <tr>
                   <% bookmarks_groups.each do |bookmark| %>
                       <td >
-                        <%= link_to image_tag(bookmark.image_name_desc.url().to_s,width: 180,height:180
-                                    ),
-                                    shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+
+                        <% if bookmark.image_name_desc.blank?  %>
+                            <%= link_to cl_image_tag("default_image_all.png", width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png"),  shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+                        <% else %>
+                            <%= link_to cl_image_tag(bookmark.image_name_desc , width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png"),  shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+                        <% end%>
+
+
                         </br><%= bookmark.title[0,15] %>
                       </td>
 
