--- a/app/views/shop/show_bookmark.html.erb
+++ b/app/views/shop/show_bookmark.html.erb
@@ -1,8 +1,8 @@
 <div class="shop_container">
   <%= render 'shop_nav' %>
-  <div class="shop_upper_container" data-shop-type="BOOKMARK">
 
-    <a href="#" class="btn btn-primary shop_let_me_see_on_my_room_btn">Let me see it in my room</a>
+  <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
+    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,id:@bookmark.id),:class => "btn btn-primary"%>
     <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
     <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
 
@@ -14,7 +14,13 @@
 
   <div class="shop_left">
     <p>
-      <%= image_tag @bookmark.image_name_desc.url.to_s , width: 180,height:180,:class =>'shop_image_name'  %>
+      <% if @bookmark.image_name_desc.blank?  %>
+          <%= cl_image_tag("default_image_all.png", width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png")%>
+      <% else %>
+          <%= cl_image_tag(@bookmark.image_name_desc , width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png") %>
+      <% end%>
+
+
     </p>
   </div>
   <div class="shop_right">
@@ -44,8 +50,15 @@
               <tr>
                 <% bookmark_groups.each do |bookmark| %>
                     <td >
-                      <%= link_to image_tag(bookmark.image_name_desc.url().to_s,:width => 180, :height => 180),
-                                  shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+
+                      <% if bookmark.image_name_desc.blank?  %>
+                          <%= link_to cl_image_tag("default_image_all.png", width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png"),  shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+                      <% else %>
+                          <%= link_to cl_image_tag(bookmark.image_name_desc , width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png"),  shop_show_bookmark_path(bookmark.id,get_clean_name(bookmark.title)), :method => :get %>
+                      <% end%>
+
+
+
                       </br><%= bookmark.title[0,15] %>
                     </td>
                 <% end %>
