--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -31,7 +31,14 @@
     <td><%= theme.id %></td>
     <td><%= theme.name %></td>
     <td><%= theme.description %></td>
-    <td><%= image_tag(theme.image_name.url().to_s,width: 100, height:100) %></td>
+    <td>
+      <% if theme.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag theme.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
+    </td>
 
     <td><%= theme.category %></td>
     <td><%= theme.style %></td>
