--- a/app/views/users_photos/index.html.erb
+++ b/app/views/users_photos/index.html.erb
@@ -25,7 +25,15 @@
             <td><%= users_photo.user.email %></td>
         <%  end %>
         <td><%= users_photo.description %></td>
-        <td><%= image_tag(users_photo.image_name.url().to_s,width: 100, height:100) %></td>
+        <td>
+          <% if users_photo.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag users_photo.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
         <td><%= users_photo.profile_image %></td>
 
         <td><%= link_to 'Show', users_photo %></td>
