--- a/app/views/users_photos/index_users_photos_by_user_id.html.erb
+++ b/app/views/users_photos/index_users_photos_by_user_id.html.erb
@@ -20,7 +20,16 @@
       <tr>
 
         <td><%= users_photo.description %></td>
-        <td><%= image_tag(users_photo.image_name.url().to_s,width: 100, height:100) %></td>
+        <td>
+
+          <% if users_photo.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag users_photo.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+
+        </td>
         <td><%= users_photo.profile_image %></td>
 
         <td><%= link_to 'Set a profile image', update_users_photos_profile_image_by_user_id_by_users_photo_id_path(users_photo.user_id,users_photo.id), method: :put %></td>
