Bookmark View- fix Firefox issue where function argument isn't present. Google fonts url changed to // instead of http:// to fix mixed content issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
 
   <link rel="shortcut icon"  href="<%= cloudinary_url("http://res.cloudinary.com/hpdnx5ayv/image/upload/v1368722702/favicon_uu2zkk.ico") %>" />
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,400,300,600' rel='stylesheet' type='text/css'>
   <%= render 'layouts/shim' %>
 </head>
 <body  class="<%= @room_backgroud_color ? 'room_backgroud_color' : ''%>">
