--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -144,8 +144,8 @@ ul.bookmark_menu_list {
   position:absolute;
   bottom:0;
   left:0;
-  border:1px solid #7d7d7d;
-  border-radius:6px;
+  border:2px solid #7d7d7d;
+  border-radius:100%;
 }
 .my_bookmarks_bookmark_name_form, .discover_bookmark_name_form{
   left:33px;
@@ -157,7 +157,7 @@ ul.bookmark_menu_list {
 .my_bookmarks_bookmark_name_form input, .discover_bookmark_name_form input{
   width:140px;
   margin:0;
-  padding-left:10px;
+  margin-left:10px;
   border:none;
 
 }
