Profile Responsive Design for screen height less than 630px- the size of Chrome on 11 inch Mac with Doc showing.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -383,3 +383,18 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
 .profile_friend_button{
   padding-right:20px;
 }
+
+/*PROFILE Media Queries*/
+@media screen and (max-height:630px){
+  .profileHome_activity #gridItemList{
+    height:335px;
+  }
+
+  .gridItemPicture{
+    height:160px;
+  }
+
+  .profileActivity_activity #gridItemList{
+    height:450px;
+  }
+}
