--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -385,7 +385,12 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
 }
 
 /*PROFILE Media Queries*/
-@media screen and (max-height:630px){
+@media screen and (max-height:720px){
+  .profileHome_activity #gridItemList{
+    height:365px;
+  }
+}
+@media screen and (max-height:650px){
   .profileHome_activity #gridItemList{
     height:335px;
   }
