some more size adjustements for bookmarks

--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -314,7 +314,7 @@ div.just_added img{
   .custom_bookmark_confirm_add_wrap img{
   width:100px;
   height:100px;
-  padding: 0 0 1em 4px;
+  padding: 0 1em 4px;
   }
 }
 @media screen and (max-height:580px){
