--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= f.label 'position on the screen' %><br />
-    <%= f.select :position, [['position of bookmark', 1], ['position of item', 2], ['position of theme', 3],['position of new version']] %>
+    <%= f.select :position, [['position of bookmark', 1], ['position of item', 2], ['position of theme', 3],['position of new version',4]] %>
   </div>
 
     <div class="field">
