Profile pic not stretched. Data is capitalized now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,6 +74,9 @@ footer ul li {
     filter: FlipH;
     -ms-filter: "FlipH";
 }
+.capitalize{
+    text-transform: capitalize;
+}
 .hidden{
     visibility:hidden;
 }
